assets and font loaded

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "Gobold_Regular";
+  src: local("Gobold_Regular"),
+    url(./assets/fonts/Gobold_Regular.otf) format("otf");
+}
+@font-face {
+  font-family: "Product_Sans";
+  src: local("Product_Sans"), url(./assets/fonts/Product_Sans.ttf) format("ttf");
+}
+
 *,
 *::after,
 *::before {
@@ -12,9 +22,7 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Gobold_Regular", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
