--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -4,24 +4,7 @@
   align-items: center;
   padding: 0 1.5rem;
   margin: 2rem auto;
-}
-/* Mobile view */
-@media (min-width: 76.8rem) {
-  .navbar__container {
-    width: 75rem;
-  }
-}
-/* tab view */
-@media (min-width: 99.2rem) {
-  .navbar__container {
-    width: 97rem;
-  }
-}
-/* Desktop view */
-@media (min-width: 120rem) {
-  .navbar__container {
-    width: 117rem;
-  }
+  max-width: 120rem;
 }
 
 .navbar__items {
@@ -36,9 +19,32 @@
   text-decoration: none;
   color: gray;
 }
+
 .navbar__item--active {
   color: black;
+  border-bottom: 3px solid black;
 }
+
 .navbar__item:hover {
   color: black;
+}
+
+.navbar__logo,
+img {
+  width: 3rem;
+}
+
+.navbar__user {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.navbar__user-text {
+  font-size: 1.5rem;
+}
+
+.navbar__user-logo {
+  height: 2rem;
+  width: 2rem;
 }
