cart component added

--- a/src/pages/StorePage.module.css
+++ b/src/pages/StorePage.module.css
@@ -12,7 +12,6 @@
   padding: 4rem 2rem;
 }
 
-
 .shopContainer {
   flex: 0 1 45%;
 }
@@ -20,35 +19,67 @@
   flex: 0 1 25%;
 }
 
-.headingContainer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.headingContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.headingContainer h1 {
+  font-size: 2.2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.headingButton {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.headingButton button {
+  padding: 0.5rem 1rem;
+  background-color: #fff;
+}
+.subHeading {
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 2rem 0 1rem 0;
+}
 
-}
-.headingContainer h1{
-    font-size: 2.2rem;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-.headingButton{
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-}
-.headingButton button{
-    padding: 0.5rem 1rem;
-    background-color: #fff;
-}
-.subHeading{
-    font-size: 2rem;
-    font-weight: 500;
-    margin: 2rem 0 1rem 0 ;
-}
-
-.productCards{
+.productCards {
   margin-top: 2rem;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+.cartCards {
+  margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.logoBoxes {
+  display: flex;
+  gap: 3rem;
+  margin-bottom: 1rem;
+}
+.logoBox {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.logoBox p {
+  font-size: 1.5rem;
+}
+
+.orderButton {
+  background-color: #000;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  display: block;
+  margin: 3rem auto 0 auto;
+}
+.cartContent {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
