--- a/src/components/CartCard.module.css
+++ b/src/components/CartCard.module.css
@@ -1,26 +1,24 @@
 .card {
-  flex: 0 1 30%;
   background-color: #fff;
   margin-bottom: 2rem;
+  display: flex;
+  width: 100%;
+  gap: 2rem;
 }
-.card:hover{
-  cursor: pointer;
+.cardDetails{
+  flex: 1 0 auto;
 }
 .cardImage {
-  width: 100%;
+  flex: 2 0 auto;
+  /* width: 100%; */
   background-color: #eee;
 }
 .cardTitle {
   font-size: 2rem;
   font-weight: 600;
 }
-.cardFooter {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cardFooter h4 {
+.cardDetails h4 {
   font-size: 1.5rem;
   font-weight: 500;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
 }
