--- a/src/components/FilterComponent.module.css
+++ b/src/components/FilterComponent.module.css
@@ -1,6 +1,5 @@
 .fliterContainer {
   flex: 0 1 25%;
-
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 4rem 2rem;
@@ -41,5 +40,11 @@
   color: #fff;
   padding: 0.5rem 1rem;
   display: block;
-  margin: 3rem auto 0 auto;
+  margin: 1rem auto 1rem auto;
+}
+.filterContent {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
