--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -5,6 +5,7 @@
   padding: 0 1.5rem;
   margin: 2rem auto;
   max-width: 120rem;
+  position: relative;
 }
 
 .navbar__items {
@@ -47,4 +48,46 @@ img {
 .navbar__user-logo {
   height: 2rem;
   width: 2rem;
+}
+
+.hamburger {
+  border: 0;
+  height: 40px;
+  width: 40px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: #283b8b;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none;
+}
+
+.hamburger:hover {
+  background-color: #2642af;
+}
+@media screen and (max-width: 550px) {
+  .hamburger {
+    display: block;
+  }
+  .navbar__user {
+    display: none;
+  }
+  .navbar__items {
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 5rem;
+    z-index: 9999;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 6rem);
+    background-color: white;
+    display: none;
+  }
+  .navbar__items.expanded{
+    display: flex;
+  }
 }
