--- a/src/components/cart/CartComponent.module.css
+++ b/src/components/cart/CartComponent.module.css
@@ -4,6 +4,11 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 4rem 2rem;
 }
+@media screen and (max-width: 550px) {
+  .cartContainer{
+   margin-top: 2rem;
+  }
+}
 
 .cartCards {
   margin-top: 2rem;
