--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -16,3 +16,13 @@
   font-weight: 500;
   text-align: center;
 }
+.subHeading{
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-align: center;
+
+}
+.subHeading, a{
+  text-decoration: none;
+}
